force-app/main/default/objects/Archived_Contact__b/Archived_Contact__b.object-meta.xml
<CustomObject>
    <label>Archived Contact</label>
    <pluralLabel>Archived Contacts</pluralLabel>
</CustomObject>