force-app/main/default/objects/Archived_Contact__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Contacts</relationshipLabel>
    <relationshipName>Archived_Contact_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>