force-app/main/default/objects/Archived_Contact__b/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>CreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Archived_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>