force-app/main/default/objects/Archived_Contact__b/fields/Malling_City__c.field-meta.xml
<CustomField>
    <fullName>Malling_City__c</fullName>
    <label>Malling City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>