force-app/main/default/objects/Archived_Contact__b/fields/Malling_Country__c.field-meta.xml
<CustomField>
    <fullName>Malling_Country__c</fullName>
    <label>Malling Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>