force-app/main/default/objects/Archived_Contact__b/fields/Malling_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Malling_Zip_Code__c</fullName>
    <label>Malling Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>